Endrer til at inntektsgrunnlag tar inn alle inntekter og sorterer ut de interessante selv (#3916)